feat(watchdog): Update service links and enhance health check response with summary data

--- a/docker/services/frontend/html/index.html
+++ b/docker/services/frontend/html/index.html
@@ -1412,8 +1412,9 @@
                     <div class="service-resource net"><span class="value">trading-net</span><span class="label">Network</span></div>
                 </div>
                 <div class="service-links">
-                    <a href="/watchdog/health" target="_blank">Health</a>
+                    <a href="/service-watchdog.html" target="_blank">Info</a>
                     <a href="/watchdog/docs" target="_blank">API Docs</a>
+                    <a href="/watchdog/health" target="_blank">Health</a>
                     <a href="/watchdog/api/v1/status" target="_blank">Status</a>
                 </div>
             </div>
