--- a/docker/services/frontend/html/index.html
+++ b/docker/services/frontend/html/index.html
@@ -1418,6 +1418,30 @@
                     <a href="/watchdog/api/v1/status" target="_blank">Status</a>
                 </div>
             </div>
+
+            <!-- API Tests -->
+            <div class="service-card" id="tests-card" style="background: linear-gradient(135deg, rgba(139, 92, 246, 0.15), rgba(139, 92, 246, 0.05)); border-color: rgba(139, 92, 246, 0.3);">
+                <div class="service-header">
+                    <h2>API Tests</h2>
+                    <span class="status-badge" id="tests-status" style="background: rgba(139, 92, 246, 0.2); color: #a78bfa;">BEREIT</span>
+                </div>
+                <p>Interaktive Test-Suite - Testet alle API-Endpunkte mit Live-Feedback und detaillierter Fehlerausgabe.</p>
+                <div class="service-info" id="tests-info">
+                    <div><span class="label">Tests</span><span id="tests-count">21</span></div>
+                    <div><span class="label">Services</span><span id="tests-services">9</span></div>
+                    <div><span class="label">Letzter Lauf</span><span id="tests-last-run">-</span></div>
+                </div>
+                <div class="service-resources">
+                    <div class="service-resource ram"><span class="value" id="tests-passed">-</span><span class="label">Passed</span></div>
+                    <div class="service-resource cpu"><span class="value" id="tests-failed">-</span><span class="label">Failed</span></div>
+                    <div class="service-resource net"><span class="value" id="tests-skipped">-</span><span class="label">Skipped</span></div>
+                </div>
+                <div class="service-links">
+                    <a href="/service-tests.html" target="_blank" style="background: linear-gradient(135deg, rgba(139, 92, 246, 0.3), rgba(139, 92, 246, 0.15)); color: #a78bfa; font-weight: 600;">Tests starten</a>
+                    <a href="/watchdog/docs#/Tests" target="_blank">API Docs</a>
+                    <a href="/watchdog/api/v1/tests/history" target="_blank">Historie</a>
+                </div>
+            </div>
         </div>
 
     </div>
@@ -1559,6 +1583,46 @@
                 }
 
                 telegramEl.textContent = data.telegram_enabled ? 'Aktiv' : 'Inaktiv';
+            }
+        }
+
+        async function updateTestsInfo() {
+            try {
+                const response = await fetch('/watchdog/api/v1/tests/status');
+                const data = await response.json();
+
+                const statusEl = document.getElementById('tests-status');
+                const lastRunEl = document.getElementById('tests-last-run');
+                const passedEl = document.getElementById('tests-passed');
+                const failedEl = document.getElementById('tests-failed');
+                const skippedEl = document.getElementById('tests-skipped');
+
+                if (data.status === 'running') {
+                    statusEl.textContent = 'RUNNING';
+                    statusEl.style.background = 'rgba(59, 130, 246, 0.2)';
+                    statusEl.style.color = '#60a5fa';
+                } else if (data.summary) {
+                    if (data.summary.failed > 0) {
+                        statusEl.textContent = 'FAILED';
+                        statusEl.style.background = 'rgba(239, 68, 68, 0.2)';
+                        statusEl.style.color = '#f87171';
+                    } else {
+                        statusEl.textContent = 'PASSED';
+                        statusEl.style.background = 'rgba(34, 197, 94, 0.2)';
+                        statusEl.style.color = '#4ade80';
+                    }
+
+                    passedEl.textContent = data.summary.passed || 0;
+                    failedEl.textContent = data.summary.failed || 0;
+                    skippedEl.textContent = data.summary.skipped || 0;
+
+                    if (data.completed_at) {
+                        const date = new Date(data.completed_at);
+                        lastRunEl.textContent = date.toLocaleTimeString('de-CH');
+                    }
+                }
+            } catch (e) {
+                // Tests API not available, keep default state
             }
         }
 
@@ -1792,6 +1856,7 @@
                 updateHmmInfo(),
                 updateEmbedderInfo(),
                 updateWatchdogInfo(),
+                updateTestsInfo(),
                 updateEasyInsightInfo(),
                 updateSystemMetrics(),
                 updateStorageMetrics()
